--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "validate": "bun run typecheck && bun run lint && bun run format:check"
   },
   "dependencies": {
-    "hono": "^4.7.5"
+    "hono": "^4.7.5",
+    "http-status": "^2.1.0",
+    "node-forge": "^1.3.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/js": "^9.23.0",
     "@types/bun": "latest",
+    "@types/node-forge": "^1.3.11",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
