feat: specify entry points in package.json and add dependency install in GitHub Actions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "saavnify",
   "type": "module",
+  "main": "dist/index.mjs",
+  "module": "dist/index.mjs",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
     "dev:wrangler": "wrangler dev",
