--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
+        
+      - name: Install dependencies
+        run: bun install
+
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
