--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "validate": "bun run typecheck && bun run lint && bun run format:check"
   },
   "dependencies": {
+    "@scalar/hono-api-reference": "^0.7.3",
     "hono": "^4.7.5",
     "http-status": "^2.1.0",
     "node-forge": "^1.3.1",
