--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,5 +5,6 @@
 	"compatibility_date": "2025-03-27",
 	"observability": {
 		"enabled": true
-	}
+	},
+	"assets": { "directory": "./public/", "binding": "ASSETS" }
 }
